Added on-boarding for headlines panel

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </header>
     <div class="row">
-      <h1 id="intro">Click on GET ARTICLES to view archived articles from NYT</h1>
+      <h1 class="intro" id="main_area_intro">Click on GET ARTICLES to view archived articles from NYT</h1>
       <div id="data_section">
         <p>view by: </p>
         <select class="dropdown" id="datatype_dropdn">
@@ -44,8 +44,11 @@
         </select>
         <div id="data"></div>
       </div><!--
-   --><div id="heading_section">
-        <div class="article"></div>
+   --><div id="heading_section_top">
+        <h1 class="intro" id="headline_panel_intro">Click on any item on left to view related articles</h1>
+        <div id="heading_section">
+          <div class="article"></div>
+        </div>
       </div>
     </div>
   </body>
